force-app/main/default/objects/Field_Picklist_RecordType_Mapping__mdt.object
<CustomObject>
    <description>Object to capture the mapping of the fields with the Record Types</description>
    <fields>
        <fullName>FieldName__c</fullName>
        <description>Name of the FieldName values to be mapped</description>
        <label>FieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PickListName__c</fullName>
        <description>Name of the Picklist values to be mapped</description>
        <label>PickListName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <description>Record type developer name of the SObject</description>
        <label>RecordType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObjectName__c</fullName>
        <label>SObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>A valid value for the field, based on object and record type</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Field Picklist RecordType Mapping</label>
    <pluralLabel>Field Picklist RecordType Mapping</pluralLabel>
</CustomObject>